--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vincent Pizzeria</title>
+    <meta property="og:site_name" content="Vincent Pizzeria Template">
+  <meta property="og:title" content="Vincent Pizzeria Template">
+  <meta property="og:description"
+    content="The Vincent Pizzeria template is a modern, responsive website built with HTML, CSS, and JavaScript. It features an engaging design that highlights the pizzeria's menu and special offers, making it perfect for creating an inviting online presence for any restaurant.">
+  <meta property="og:image"
+    content="assets/images/back_1.jpg">
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type"content="files/png">
+  <meta property="og:image:width" content="720">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://vincent-pizzeria.tholumuzi.co.za">
+  <link rel="canonical" href="https://vincent-pizzeria.tholumuzi.co.za">
+  <meta name="description" content="
+  The Vincent Pizzeria template is a modern, responsive website built with HTML, CSS, and JavaScript. It features an engaging design that highlights the pizzeria's menu and special offers, making it perfect for creating an inviting online presence for any restaurant.">
+  <meta name="keywords" content="pizza, template, website, pizza template, order online, franchise, thoughts, ideas, CSS, html, South Africa, javascript, web development, web design , App Development" >
+  <link rel="icon" type="image/x-icon" href="./assets/images/icon_1.png">
+  <title>Vincent Pizzeria Template</title>
 
   <!-- google font -->
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,700" rel="stylesheet" />
